--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -30,7 +30,6 @@
                   <tbody>
                     <tr>
                       <td class="flexible-content">
-                        <p>By Item Content</p>
 
                         <div class="linngrid slickgrid" id="pwpByItemGrid"
                           style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
@@ -82,7 +81,6 @@
                   <tbody>
                     <tr>
                       <td class="flexible-content">
-                        <p>By Amount Content</p>
                         <div class="linngrid" id="pwpByAmountGrid"
                           style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
 
@@ -98,8 +96,10 @@
                             </tr>
                             <tr>
                               <td class="totalsLabel"><b>Amount To Pay:</b></td>
-                              <td style="text-align: right"><b> <input class="amountInput" type="number"
-                                    ng-model="amountToPay" /> {{ orderCurrency }}</b></td>
+                              <td style="text-align: right">
+                                <b><input class="amountInput" type="number" ng-model="amountToPay" /> {{ orderCurrency }}</b>
+                                <input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay">
+                              </td>
                             </tr>
                             <tr>
                               <td class="totalsLabel">Your balance is:</td>
