--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -76,7 +76,7 @@
                   </tbody>
                 </table>
               </div>
-              <div ng-hide="hideTabByAmount" class="tab-pane position-relative" data-index="1">
+              <div ng-disabled="hideTabByAmount" class="tab-pane position-relative" data-index="1">
                 <table class="generic-module-layout">
                   <tbody>
                     <tr>
@@ -138,7 +138,7 @@
 
       </lw-tab>
 
-      <lw-tab ng-hide="hideTabByAmount" data-index="1">
+      <lw-tab ng-disabled="hideTabByAmount" data-index="1">
 
       </lw-tab>
     </lw-tab-set>
